--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -76,6 +75,15 @@
     --border: 162 10% 20%;
     --input: 162 10% 20%;
     --ring: 162 54% 61%;
+
+    --sidebar-background: 162 10% 12%;
+    --sidebar-foreground: 0 0% 98%;
+    --sidebar-primary: 162 54% 61%;
+    --sidebar-primary-foreground: 162 54% 10%;
+    --sidebar-accent: 162 10% 18%;
+    --sidebar-accent-foreground: 0 0% 98%;
+    --sidebar-border: 162 10% 20%;
+    --sidebar-ring: 162 54% 61%;
   }
 }
 
